Updated social media links in index.html

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
             <span class="job">Coder & Tech Writer</span>
         </div>
         <div class="media-button">
-            <a href="#" style="background: #4267b2;" class="media-btn">
+            <a href="https://www.facebook.com/vaibhavdosar09/" style="background: #4267b2;" class="media-btn">
                 <i class='bx bxl-facebook'></i>
             </a>
-            <a href="#" style="background: #1da1f2;" class="media-btn">
+            <a href="https://twitter.com/vaibhavgupta090" style="background: #1da1f2;" class="media-btn">
                 <i class='bx bxl-twitter'></i>
             </a>
-            <a href="#" style="background: #e1306c;" class="media-btn">
+            <a href="https://www.instagram.com/vaibhav_dosar/" style="background: #e1306c;" class="media-btn">
                 <i class='bx bxl-instagram'></i>
             </a>
-            <a href="#" style="background-color: #0a66c2;" class="media-btn">
+            <a href="https://www.linkedin.com/in/vaibhav-gupta-45a340225/" style="background-color: #0a66c2;" class="media-btn">
                 <i class='bx bxl-linkedin'></i>
             </a>
         </div>
